--- a/lecture/text/main.tex
+++ b/lecture/text/main.tex
@@ -14,8 +14,6 @@
         \end{tabular}
     \end{center}
 
-    \pause
-
     Many \LaTeX\ starters are confused with how to correctly print quotes, hyphens and dots.\\
     \pause
     \`{} prints a left single quote, ' prints a right single quote.\\
@@ -219,7 +217,7 @@
 \begin{frame}
     \frametitle{Spaces may be confusing}
     There are defined command of spaces in different width and usages.
-    \begin{itemize}[<+->]
+    \begin{itemize}
         \item \textvisiblespace\ - the basic space in \LaTeX\. Note that any number of spaces or tabs is equal to one space, and the space after a command is ignored. If you want to add an extra space, use \alert{\textbackslash\textvisiblespace\ } which makes a 1/3\,em space (1 em is approximately the width of an \structure{M} in the current font)
         \item \~{} - If two words can't be separated on two lines, you can tell \LaTeX\ about it using a tie (\~{}), such as Prof.\~{}Hamade (Prof.~Hamade).
         \item  \samplecommand{,} - makes a 1/6\,em space, commonly used before units (notice the space before em on this page)
@@ -234,7 +232,7 @@
     \frametitle{Separate contents into lines and pages}
     Here are some basic commands about lines and pages in \LaTeX,  you will use them everywhere.
     \pause
-    \begin{itemize}[<+->]
+    \begin{itemize}
         \item \samplecommand{newline} - begin a new line
         \item \alert{\textbackslash\textbackslash} - begin a new line (not recommended\footnotemark[1])
         \item \samplecommand{par} - begin a new paragraph (a new line with indent)
