--- a/lecture/all/main.tex
+++ b/lecture/all/main.tex
@@ -110,7 +110,7 @@
 \urlstyle{same}
 
 \title{Introduction to \LaTeX\  from a Practical Perspective}
-\author{\hyperlink{https://github.com/TechJI-2023/latex_wksp}{Z. Zhou}, \hyperlink{https://github.com/evs000}{M. Huang}, \hyperlink{https://github.com/fakefred}{fkfd}, \hyperlink{https://github.com/Hydraallen}{R. Wang}}
+\author{\hyperlink{https://github.com/TechJI-2023/latex_wksp}{Z. Zhou}, \hyperlink{https://github.com/fakefred}{fkfd}, \hyperlink{https://github.com/Hydraallen}{R. Wang}}
 \institute{TechJI}
 \date{\today}
 \begin{document}
@@ -129,7 +129,6 @@
         \item General Introduction to \LaTeX \hspace*{\fill} \textit{by} Z.~Zhou
         \item Introduction to \packagename{Tikz} \hspace*{\fill} \textit{by} Z.~Zhou
         \item Beamer \hspace*{\fill} \textit{by} Y.~Yin
-        \item Introduction to \packagename{Bibtex} \hspace*{\fill} \textit{by} M.~Huang
     \end{itemize}
 \end{frame}
 
