--- a/lecture/all/main.tex
+++ b/lecture/all/main.tex
@@ -120,7 +120,7 @@
     \begin{figure}
         \centering
         \caption*{Wechat Group}
-        \includegraphics[width=2.5cm]{./qrcode.jpg}
+        \includegraphics[width=2.5cm]{./qrcode.png}
     \end{figure}
 \end{frame}
 
